clean-up on SVM, NBC and GP notebooks

--- a/3 - SVMs, bias-variance, and kernels/Support Vector Machines, Bias-Variance tradeoff and an Introduction to Kernel Theory.ipynb
+++ b/3 - SVMs, bias-variance, and kernels/Support Vector Machines, Bias-Variance tradeoff and an Introduction to Kernel Theory.ipynb
@@ -185,14 +185,7 @@
    "source": [
     "# %load solutions/code1.py\n",
     "### WRITE YOUR CODE HERE\n",
-    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n",
-    "\n",
-    "w = np.array([0.7, -1])\n",
-    "norm = np.linalg.norm(w)\n",
-    "w = w/norm\n",
-    "w0 = 0.4/norm\n",
-    "M = y*(np.dot(X,w) + w0)\n",
-    "print(\"margin =\", np.min(M))\n"
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
    ]
   },
   {
@@ -236,36 +229,7 @@
    "source": [
     "# %load solutions/code2.py\n",
     "### WRITE YOUR CODE HERE\n",
-    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n",
-    "\n",
-    "import scipy.optimize as sopt\n",
-    "\n",
-    "def func(x):\n",
-    "    \"\"\"x = (M,w_1,w_2,b)\"\"\"\n",
-    "    return -x[0]\n",
-    "\n",
-    "def ineq_constr(x):\n",
-    "    \"\"\"x = (M,w_1,w_2,b)\"\"\"\n",
-    "    return y*(x[1]*X[:,0] + x[2]*X[:,1] + x[3]*np.ones(X.shape[0])) - x[0]*np.ones(X.shape[0])\n",
-    "\n",
-    "def eq_const(x):\n",
-    "    return x[1]*x[1]+x[2]*x[2]-1\n",
-    "\n",
-    "x0 = np.array([0.,0.7,-1.,0.4])\n",
-    "res = sopt.fmin_slsqp(func, x0, f_eqcons=eq_const, f_ieqcons=ineq_constr)\n",
-    "print(res)\n",
-    "print(\"margin =\", res[0])\n",
-    "fig=plt.figure(figsize=fig_size, dpi= 80, facecolor='w', edgecolor='k')\n",
-    "plt.scatter(Xblue[:,0],Xblue[:,1],c='b')\n",
-    "plt.scatter(Xred[:,0],Xred[:,1],c='r')\n",
-    "XX = np.arange(-1.,12.,0.1)\n",
-    "YY = -(res[1]*XX+res[3])/res[2]\n",
-    "plt.plot(XX,YY,c='g')\n",
-    "YY = -(res[1]*XX+res[3]+res[0])/res[2]\n",
-    "plt.plot(XX,YY,'g--')\n",
-    "YY = -(res[1]*XX+res[3]-res[0])/res[2]\n",
-    "plt.plot(XX,YY,'g--');\n",
-    "\n"
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
    ]
   },
   {
@@ -783,39 +747,7 @@
    "source": [
     "# %load solutions/code3.py\n",
     "### WRITE YOUR CODE HERE\n",
-    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n",
-    "\n",
-    "mySVC = svm.SVC(kernel='linear', C=1)\n",
-    "mySVC.fit(X,y)\n",
-    "\n",
-    "\n",
-    "# Compute margin and find support vectors\n",
-    "w = mySVC.coef_[0]\n",
-    "w0 = mySVC.intercept_\n",
-    "M = 1./np.linalg.norm(w)\n",
-    "print(\"SV per class:\", mySVC.n_support_)\n",
-    "print(\"w_i:\", w)\n",
-    "print(\"w_0:\", w0)\n",
-    "print(\"Margin:\", M)\n",
-    "print(\"w^T x0 + w_0:\", np.dot(w,mySVC.support_vectors_[0,:])+w0)\n",
-    "print(\"w^T x1 + w_0:\", np.dot(w,mySVC.support_vectors_[1,:])+w0)\n",
-    "print(\"w^T x2 + w_0:\", np.dot(w,mySVC.support_vectors_[2,:])+w0)\n",
-    "\n",
-    "# Plot the separating plane, the margin and the Support Vectors\n",
-    "fig=plt.figure(figsize=fig_size, dpi= 80, facecolor='w', edgecolor='k')\n",
-    "plt.scatter(Xblue[:,0],Xblue[:,1],c='b',s=20)\n",
-    "plt.scatter(Xred[:,0],Xred[:,1],c='r',s=20)\n",
-    "XX = np.arange(np.min(X[:,0]),np.max(X[:,0]),0.1)\n",
-    "#XX = np.arange(-1.,12.,0.1)\n",
-    "YY = -(w[0]*XX+w0)/w[1]\n",
-    "plt.plot(XX,YY,'g')\n",
-    "#YY = -(w[0]*XX+w0+M)/w[1]\n",
-    "#plt.plot(XX,YY,'g--')\n",
-    "#YY = -(w[0]*XX+w0-M)/w[1]\n",
-    "#plt.plot(XX,YY,'g--');\n",
-    "#plt.ylim(-6,10);\n",
-    "#plt.scatter(mySVC.support_vectors_[:,0], mySVC.support_vectors_[:,1], s=80, edgecolors='k', facecolors='none');\n",
-    "print(\"Training score:\", mySVC.score(X,y))\n"
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
    ]
   },
   {
@@ -1113,18 +1045,7 @@
    "source": [
     "# %load solutions/code4.py\n",
     "### WRITE YOUR CODE HERE\n",
-    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n",
-    "\n",
-    "res = np.loadtxt(\"sep_lin.csv\", delimiter=',')\n",
-    "X = res[:,0:-1]\n",
-    "y = res[:,-1].astype(int)\n",
-    "Xblue = X[y==-1]\n",
-    "Xred = X[y==1]\n",
-    "\n",
-    "mySVC = svm.SVC(kernel='rbf')\n",
-    "mySVC.fit(X,y)\n",
-    "print(\"SV per class:\", mySVC.n_support_)\n",
-    "plot_SVC(mySVC);\n"
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
    ]
   },
   {
