--- a/4 - Naive Bayes Classification/Naive Bayes Classification.ipynb
+++ b/4 - Naive Bayes Classification/Naive Bayes Classification.ipynb
@@ -23,6 +23,7 @@
     "$$\\textrm{posterior} = \\frac{\\textrm{likelihood}\\cdot\\textrm{prior}}{\\textrm{evidence}}$$\n",
     "\n",
     "<div class=\"alert alert-success\">\n",
+    "    \n",
     "**Bayesian inference** is the problem of estimating this **posterior distribution**.<br>\n",
     "In plain words, it consists in estimating the probability of label $y$, given an input $x$, using previously seen data to estimate the **likelihood** of an $x$ input associated to label $y$ and the general **prior** probability of observing label $y$.\n",
     "</div>\n",
@@ -54,12 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T06:47:33.684378Z",
-     "start_time": "2018-10-23T06:47:31.360872Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -138,7 +134,9 @@
     "\n",
     "$$f(H, W, F) = \\arg\\max_{s} \\mathbb{P}(S=s|H,W,F) = \\arg\\max_{s} \\mathbb{P}(H|S=s)\\cdot \\mathbb{P}(W|S=s) \\cdot \\mathbb{P}(F|S=s)\\cdot \\mathbb{P}(S=s)$$\n",
     "\n",
-    "<div class=\"alert alert-warning\">**Exercice:**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Exercice:**<br>\n",
     "Let's implement a naive Bayes classifier on the data above, just to practice. We will assume that the $\\mathbb{P}(X | S)$ distributions are Gaussians (for $X = H,W,$ or $F$). Compute the scores and probabilities for each sex, for $(H=1.81, W=59, F=21)$.<br>\n",
     "Hint: use the `np.mean` and `np.std` functions to estimate distribution parameters. Use `scipy.stats.norm.pdf` to compute the Gaussian probability density function in a given input.\n",
     "</div>"
@@ -147,12 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T07:12:59.505678Z",
-     "start_time": "2018-10-23T07:12:57.466718Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# %load solutions/code1.py\n",
@@ -166,7 +159,9 @@
    "source": [
     "It appears we will always multiply together values that are smaller than one. The result will quickly become very small. It is a good habit to move to log-scale.\n",
     "\n",
-    "<div class=\"alert alert-warning\">**Exercice:**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "\n",
+    "**Exercice:**<br>\n",
     "Reuse your code above to compute log scores instead of scores.\n",
     "</div>"
    ]
@@ -174,12 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T07:14:32.397959Z",
-     "start_time": "2018-10-23T07:14:32.390542Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# %load solutions/code2.py\n",
@@ -227,12 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T07:18:08.740462Z",
-     "start_time": "2018-10-23T07:18:08.304662Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.naive_bayes import GaussianNB\n",
@@ -260,12 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T07:18:56.460914Z",
-     "start_time": "2018-10-23T07:18:47.013845Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sys import path\n",
@@ -282,7 +262,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-warning\">**Exercice:**\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Exercice:**\n",
     "Use scikit-learn to build a [multinomial naive Bayes classifier](http://scikit-learn.org/stable/modules/naive_bayes.html#multinomial-naive-bayes) on the data above. Estimate its generalization error.\n",
     "</div>"
    ]
@@ -290,12 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T07:19:59.587801Z",
-     "start_time": "2018-10-23T07:19:59.366970Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# %load solutions/code3.py\n",
@@ -309,7 +286,9 @@
    "source": [
     "We've trained our model in the Tf-Idf data. Let's see how the model behaves on raw word counts.\n",
     "\n",
-    "<div class=\"alert alert-warning\">**Exercice:**\n",
+    "<div class=\"alert alert-warning\">\n",
+    "\n",
+    "**Exercice:**\n",
     "Use scikit-learn to build a [multinomial naive Bayes classifier](http://scikit-learn.org/stable/modules/naive_bayes.html#multinomial-naive-bayes) on the raw word counts data below. Estimate its generalization error.\n",
     "</div>"
    ]
@@ -317,12 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T07:20:53.548874Z",
-     "start_time": "2018-10-23T07:20:53.539579Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Xtrain, ytrain, Xtest, ytest = spam_data.split(2000, feat='wordcount')"
@@ -331,12 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T07:21:01.613819Z",
-     "start_time": "2018-10-23T07:21:01.391812Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# %load solutions/code4.py\n",
@@ -354,12 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T07:21:50.428368Z",
-     "start_time": "2018-10-23T07:21:50.416442Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Retrain\n",
@@ -371,12 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T07:21:56.858660Z",
-     "start_time": "2018-10-23T07:21:56.846386Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Find misclassified examples\n",
@@ -391,12 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T07:22:09.372273Z",
-     "start_time": "2018-10-23T07:22:09.363687Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
@@ -409,10 +363,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T07:22:29.331957Z",
-     "start_time": "2018-10-23T07:22:29.318267Z"
-    },
     "scrolled": false
    },
    "outputs": [],
@@ -436,12 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T07:25:29.242070Z",
-     "start_time": "2018-10-23T07:25:29.030221Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
@@ -485,12 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T07:25:32.200327Z",
-     "start_time": "2018-10-23T07:25:32.177176Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(Xtrain.shape)\n",
@@ -508,12 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T07:25:52.746415Z",
-     "start_time": "2018-10-23T07:25:52.623744Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Compute cross-validation score\n",
@@ -562,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   },
   "toc": {
    "base_numbering": 1,
