--- a/5 - Gaussian Processes/Gaussian Processes.ipynb
+++ b/5 - Gaussian Processes/Gaussian Processes.ipynb
@@ -23,6 +23,7 @@
     "$$\\textrm{posterior} = \\frac{\\textrm{likelihood}\\cdot\\textrm{prior}}{\\textrm{evidence}}$$\n",
     "\n",
     "<div class=\"alert alert-success\">\n",
+    "    \n",
     "**Bayesian inference** is the problem of estimating this **posterior distribution**.<br>\n",
     "In plain words, it consists in estimating the probability of label $y$, given an input $x$, using previously seen data to estimate the **likelihood** of an $x$ input associated to label $y$ and the general **prior** probability of observing label $y$.\n",
     "</div>\n",
@@ -66,23 +67,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T07:29:14.405370Z",
-     "start_time": "2018-10-23T07:29:13.736823Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "fig_size=(10, 10)\n",
     "from scipy.stats import norm\n",
     "\n",
     "mu = 0.0\n",
     "sigma = 2.0\n",
     "x = np.linspace(-10., 10, 100)\n",
+    "fig=plt.figure(figsize=(8, 8), dpi= 80, facecolor='w', edgecolor='k')\n",
     "plt.plot(x, norm(mu,sigma).pdf(x));"
    ]
   },
@@ -100,12 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T07:31:23.782076Z",
-     "start_time": "2018-10-23T07:31:23.336230Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.stats import multivariate_normal\n",
@@ -113,6 +104,7 @@
     "pos = np.dstack((x, y))\n",
     "mu = [0.0, 0.0]\n",
     "sigma = np.array([[2.0, 0.4], [0.4, 0.5]])\n",
+    "fig=plt.figure(figsize=(8, 8), dpi= 80, facecolor='w', edgecolor='k')\n",
     "plt.contourf(x, y, multivariate_normal(mu, sigma).pdf(pos));\n",
     "print(\"mu =\",mu)\n",
     "print(\"sigma:\")\n",
@@ -228,12 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T07:51:13.988941Z",
-     "start_time": "2018-10-23T07:51:13.376538Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def func(x):\n",
@@ -248,7 +235,8 @@
     "Y = observation(X)\n",
     "x = np.linspace(-5,10,100)\n",
     "\n",
-    "fig=plt.figure(figsize=(5,5), dpi= 80, facecolor='w', edgecolor='k')\n",
+    "\n",
+    "fig=plt.figure(figsize=(8,8), dpi= 80, facecolor='w', edgecolor='k')\n",
     "plt.plot(x, func(x), 'r:', label=u'$f(x) = x\\,\\sin(x)$')\n",
     "plt.plot(X, Y, 'r.', markersize=10, label=u'Observations')\n",
     "plt.xlabel('$x$')\n",
@@ -267,12 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T08:04:32.076937Z",
-     "start_time": "2018-10-23T08:04:31.720492Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sigma_kernel = 0.2\n",
@@ -285,7 +268,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-warning\">**Exercice:**\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Exercice:**<br>\n",
     "Your turn to play. Define two functions `compute_K(X,sigma_kernel,l,sigma_noise)` (that returns the covariance matrix) and `GPpredict(x_new, x_data, y_data, Kinv)` (that returns the mean and standard deviation of the output value) below.\n",
     "</div>"
    ]
@@ -293,12 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T08:04:32.076937Z",
-     "start_time": "2018-10-23T08:04:31.720492Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# %load solutions/code5.py\n",
@@ -309,12 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T08:04:32.076937Z",
-     "start_time": "2018-10-23T08:04:31.720492Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Kinv = np.linalg.inv(compute_K(X,sigma_kernel,l,sigma_noise))\n",
@@ -354,10 +329,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T08:07:38.502669Z",
-     "start_time": "2018-10-23T08:07:38.163730Z"
-    },
     "scrolled": false
    },
    "outputs": [],
@@ -405,6 +376,7 @@
     "We could wish for an automated way of tuning these kernel parameters. Let's call them $\\theta$.\n",
     "\n",
     "One way to do that is to search for the value of $\\theta$ that maximizes the probability of the observed $\\mathbf{y}$ given the inputs $\\mathbf{x}$. In other words, to find the best $\\theta$, we search for the one that explains best the data that we already know, and then use it to make predictions on new points. That is called **Marginal Likelihood Maximization**.\n",
+    "$$\\max_\\theta \\mathbb{P}(\\mathbf{y}|\\mathbf{x})$$\n",
     "\n",
     "Fortunately for use, scikit-learn includes all these operations in a single procedure."
    ]
@@ -412,12 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T08:09:34.601535Z",
-     "start_time": "2018-10-23T08:09:34.403799Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.gaussian_process import GaussianProcessRegressor\n",
@@ -430,19 +397,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T08:09:38.849585Z",
-     "start_time": "2018-10-23T08:09:38.541507Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = np.linspace(-5,10,100)\n",
     "y = np.zeros(x.shape)\n",
     "sigma = np.zeros(x.shape)\n",
     "for i in range(x.shape[0]):\n",
-    "    y[i], sigma[i] = gp.predict(x[i], return_std=True)\n",
+    "    y[i], sigma[i] = gp.predict(x[i].reshape(-1,1), return_std=True)\n",
     "\n",
     "fig=plt.figure(figsize=(8,8), dpi= 80, facecolor='w', edgecolor='k')\n",
     "plt.plot(x, func(x), 'r:', label=u'$f(x) = x\\,\\sin(x)$')\n",
@@ -484,12 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T08:18:55.241050Z",
-     "start_time": "2018-10-23T08:18:54.699618Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.gaussian_process.kernels import WhiteKernel, ExpSineSquared\n",
@@ -511,7 +468,7 @@
     "y_gpr, y_std = gpr.predict(X_plot, return_std=True)\n",
     "\n",
     "# Plot\n",
-    "plt.figure(figsize=fig_size)\n",
+    "plt.figure(figsize=(8,8))\n",
     "lw = 2\n",
     "plt.scatter(X, y, c='k', label='data')\n",
     "plt.plot(X_plot, np.sin(X_plot), color='navy', lw=lw, label='True')\n",
@@ -554,12 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T08:22:02.068822Z",
-     "start_time": "2018-10-23T08:21:57.103287Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sys import path\n",
@@ -579,7 +531,9 @@
    "source": [
     "We have loaded a training set with 2000 examples. This means that the Gaussian Process training will require inverting a $2000\\times2000$ matrix. Although this is still feasible in a few seconds or minutes, we are touching here a limitation of Gaussian Processes in their ability to scale up to large datasets.\n",
     "\n",
-    "<div class=\"alert alert-warning\">**Exercice:**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Exercice:**<br>\n",
     "Use scikit-learn to fit a [Gaussian Process classifier](http://scikit-learn.org/stable/modules/gaussian_process.html#gaussian-process-classification-gpc) to the spam data loaded above. Estimate the generalization score.<br>\n",
     "Hint: you can use the `.toarray()` method of sparse matrices to get the corresponding dense matrix.\n",
     "</div>"
@@ -588,12 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T08:33:53.694630Z",
-     "start_time": "2018-10-23T08:32:57.423489Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# %load solutions/code6.py\n",
@@ -607,7 +556,9 @@
    "source": [
     "For a fair comparison, we can also try the training on the word count features rather than Tf-Idf ones. Although it would probably be more beneficial to search for a better kernel than the default squared exponential one.\n",
     "\n",
-    "<div class=\"alert alert-warning\">**Exercice:**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Exercice:**<br>\n",
     "Use scikit-learn to fit a Gaussian Process classifier to the raw word count data loaded below. Estimate the generalization score.\n",
     "</div>"
    ]
@@ -615,12 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T08:34:08.265221Z",
-     "start_time": "2018-10-23T08:34:08.259067Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Xtrain, ytrain, Xtest, ytest = spam_data.split(2000, feat='wordcount')"
@@ -629,12 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T08:35:17.341764Z",
-     "start_time": "2018-10-23T08:34:15.431177Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# %load solutions/code7.py\n",
@@ -664,12 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T08:36:25.583975Z",
-     "start_time": "2018-10-23T08:36:09.178688Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Find misclassified examples\n",
@@ -684,12 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T08:36:25.591676Z",
-     "start_time": "2018-10-23T08:36:25.585685Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
@@ -719,12 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T08:36:58.938911Z",
-     "start_time": "2018-10-23T08:36:58.854669Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
@@ -746,12 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T08:37:21.844184Z",
-     "start_time": "2018-10-23T08:37:21.835911Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.utils import shuffle\n",
@@ -766,12 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-23T08:37:33.987664Z",
-     "start_time": "2018-10-23T08:37:26.782859Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(Xtrain.shape)\n",
@@ -817,7 +733,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   },
   "toc": {
    "base_numbering": 1,
