Activities 4 and 5 done

--- a/2 - Text data preprocessing/Text data preprocessing.ipynb
+++ b/2 - Text data preprocessing/Text data preprocessing.ipynb
@@ -50,9 +50,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of emails 2893\n",
+      "email file: ../data/lingspam_public/bare/part5/spmsgb137.txt\n",
+      "email is a spam: True\n",
+      "Subject: secret hardcore sex site . . .\n",
+      "\n",
+      "click here now to check it out ! this is more than just hardcore sex . . . . . you will have unlimited access 24 hours a day to the most extensive collection of 5 live teen sex shows , 10 , 000 xxx movies , brand new xxx audio stories , anal sex , exclusive amateur . . . lesbian . . . gay . . . and 30 other categories of photo galleries . there are no per minute charges for anything ! you can even watch the videos of pamela lee and tommy lee doing the nasty ! ! ! shhhhhhh . . . . this site is not publicly advertised due to the explicit content ! click here now to enter\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "data_switch=1\n",
@@ -89,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,9 +114,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of documents: 2893\n",
+      "Number of words: 60618\n",
+      "Document - words matrix: (2893, 60618)\n",
+      "First words: ['00', '000', '0000', '00001', '00003000140', '00003003958', '00007', '0001', '00010', '00014', '0003', '00036', '000bp', '000s', '000yen', '001', '0010', '0010010034', '0011', '00133', '0014', '00170', '0019', '00198', '002', '002656', '0027', '003', '0030', '0031', '00333', '0037', '0039', '003n7', '004', '0041', '0044', '0049', '005', '0057', '006', '0067', '007', '00710', '0073', '0074', '00799', '008', '009', '00919680', '0094', '00a', '00am', '00arrival', '00b', '00coffee', '00congress', '00d', '00dinner', '00f', '00h', '00hfstahlke', '00i', '00j', '00l', '00m', '00p', '00pm', '00r', '00t', '00tea', '00the', '00uzheb', '01', '0100', '01003', '01006', '0104', '0106', '01075', '0108', '011', '0111', '0117', '0118', '01202', '01222', '01223', '01225', '01232', '01235', '01273', '013', '0131', '01334', '0135', '01364', '0139', '013953', '013a']\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Number of documents:\", len(email_path))\n",
     "words = countvect.get_feature_names()\n",
@@ -306,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
