--- a/4 - Naive Bayes Classification/Naive Bayes Classification.ipynb
+++ b/4 - Naive Bayes Classification/Naive Bayes Classification.ipynb
@@ -54,9 +54,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.  ,  1.82, 82.  , 30.  ],\n",
+       "       [ 0.  ,  1.8 , 86.  , 28.  ],\n",
+       "       [ 0.  ,  1.7 , 77.  , 30.  ],\n",
+       "       [ 0.  ,  1.8 , 75.  , 25.  ],\n",
+       "       [ 1.  ,  1.52, 45.  , 15.  ],\n",
+       "       [ 1.  ,  1.65, 68.  , 20.  ],\n",
+       "       [ 1.  ,  1.68, 59.  , 18.  ],\n",
+       "       [ 1.  ,  1.75, 68.  , 23.  ],\n",
+       "       [ 1.  ,  1.58, 49.  , 19.  ]])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "%matplotlib inline\n",
@@ -148,9 +167,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from scipy.stats import norm\n",
+    "\n",
+    "dataM = data[data[:,0]==0]\n",
+    "dataW = data[data[:,0]==1]\n",
+    "\n",
+    "proportion_M = len(dataM)/(len(dataM)+len(dataW))\n",
+    "proportion_W = len(dataW)/(len(dataM)+len(dataW))\n",
+    "\n",
+    "height_mean_M = np.mean(dataM[:, 1])\n",
+    "height_std_M = np.std(dataM[:, 1])\n",
+    "weight_mean_M = np.mean(dataM[:, 2])\n",
+    "weight_std_M = np.std(dataM[:, 2])\n",
+    "foot_mean_M = np.mean(dataM[:, 3])\n",
+    "foot_std_M = np.std(dataM[:, 3])\n",
+    "\n",
+    "height_mean_W = np.mean(dataW[:, 1])\n",
+    "height_std_W = np.std(dataW[:, 1])\n",
+    "weight_mean_W = np.mean(dataW[:, 2])\n",
+    "weight_std_W = np.std(dataW[:, 2])\n",
+    "foot_mean_W = np.mean(dataW[:, 3])\n",
+    "foot_std_W = np.std(dataW[:, 3])\n",
+    "\n",
+    "H=1.81\n",
+    "W=59\n",
+    "F=21\n",
+    "density_M = norm.pdf(H, height_mean_M, height_std_M)*norm.pdf(W, weight_mean_M, weight_std_M)*norm.pdf(F, foot_mean_M, foot_std_M)*proportion_M\n",
+    "density_W = norm.pdf(H, height_mean_W, height_std_W)*norm.pdf(W, weight_mean_W, weight_std_W)*norm.pdf(F, foot_mean_W, foot_std_W)*proportion_W\n",
+    "\n",
+    "print(\"Probability of man : \" + str(100*density_M/(density_M+density_W)) + \" %.\")\n",
+    "print(\"Probability of woman : \" + str(100*density_W/(density_M+density_W)) + \" %.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# %load solutions/code1.py\n",
     "### WRITE YOUR CODE HERE\n",
-    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n",
+    "\n",
+    "# Estimate distribution parameters for males\n",
+    "dataM = data[data[:,0]==0]\n",
+    "mu_HS0 = np.mean(dataM[:,1])\n",
+    "std_HS0 = np.std(dataM[:,1])\n",
+    "mu_WS0 = np.mean(dataM[:,2])\n",
+    "std_WS0 = np.std(dataM[:,2])\n",
+    "mu_FS0 = np.mean(dataM[:,3])\n",
+    "std_FS0 = np.std(dataM[:,3])\n",
+    "pS0 = dataM.shape[0]/data.shape[0]\n",
+    "\n",
+    "# Estimate distribution parameters for females\n",
+    "dataF = data[data[:,0]==1]\n",
+    "mu_HS1 = np.mean(dataF[:,1])\n",
+    "std_HS1 = np.std(dataF[:,1])\n",
+    "mu_WS1 = np.mean(dataF[:,2])\n",
+    "std_WS1 = np.std(dataF[:,2])\n",
+    "mu_FS1 = np.mean(dataF[:,3])\n",
+    "std_FS1 = np.std(dataF[:,3])\n",
+    "pS1 = dataF.shape[0]/data.shape[0]\n",
+    "\n",
+    "# score that (H=1.81,W=59,F=21) is male/female\n",
+    "H=1.81\n",
+    "W=59\n",
+    "F=21\n",
+    "from scipy.stats import norm\n",
+    "score_M = pS0 * norm.pdf(H,mu_HS0,std_HS0) * norm.pdf(W,mu_WS0,std_WS0) * norm.pdf(F,mu_FS0,std_FS0)\n",
+    "score_F = pS1 * norm.pdf(H,mu_HS1,std_HS1) * norm.pdf(W,mu_WS1,std_WS1) * norm.pdf(F,mu_FS1,std_FS1)\n",
+    "print(\"score male    :\", score_M)\n",
+    "print(\"score female  :\", score_F)\n",
+    "print(\"proba male    :\", score_M/(score_M+score_F))\n",
+    "print(\"proba female  :\", score_F/(score_M+score_F))\n"
    ]
   },
   {
