2019 update of the NBC and GP classes

--- a/4 - Naive Bayes Classification/Naive Bayes Classification.ipynb
+++ b/4 - Naive Bayes Classification/Naive Bayes Classification.ipynb
@@ -186,6 +186,8 @@
     "Let's generalize.\n",
     "\n",
     "<div class=\"alert alert-success\">\n",
+    "    \n",
+    "    \n",
     "Given $n$ features $X_i$ and classes $Y$, **naive Bayes classifiers** estimate (from data) the distributions $\\mathbb{P}(Y)$ and $\\mathbb{P}(X_i|Y)$. Then, using Bayes rule and the naive Bayes assumption, they predict the most probable estimated class:\n",
     "\\begin{align*}\n",
     "\\arg\\max_{y} \\mathbb{P}(Y=y|X=x) & = \\arg\\max_{y} \\frac{\\prod\\limits_{i=1}^n \\mathbb{P}(X_i=x_i|Y=y) \\mathbb{P}(Y=y)}{\\mathbb{P}(X=x)}\\\\\n",
@@ -433,6 +435,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Xtrain, ytrain, Xtest, ytest  = shuffle_and_split(X,y,1000)\n",
+    "\n",
     "print(Xtrain.shape)\n",
     "print(ytrain.shape)\n",
     "digits_nbc = GaussianNB()\n",
