--- a/10 - Bagging/Bagging.ipynb
+++ b/10 - Bagging/Bagging.ipynb
@@ -89,7 +89,7 @@
     "\n",
     "References:<br>\n",
     "**An Introduction to the Bootstrap.**<br>\n",
-    "B. Efron and R. Tibshirani, *Chapman & Hall/CRC, (1993).\n",
+    "B. Efron and R. Tibshirani, Chapman & Hall/CRC, (1993).\n",
     "\n",
     "**[What Teachers Should Know About the Bootstrap: Resampling in the Undergraduate Statistics Curriculum](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4784504/)**<br>\n",
     "T. C. Hesterberg, *The American Statistician*, 69(4), 371–386, (2015).<br>\n",
@@ -106,12 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-27T07:53:54.139086Z",
-     "start_time": "2018-11-27T07:53:53.019320Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -130,10 +125,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-27T07:54:26.080833Z",
-     "start_time": "2018-11-27T07:54:24.422776Z"
-    },
     "scrolled": true
    },
    "outputs": [],
@@ -152,7 +143,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-warning\">**Exercice:**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "\n",
+    "**Exercice:**<br>\n",
     "Implement a Bootstrap algorithm to estimate the distribution of the empirical average and empirical median estimators on this data.<br>\n",
     "Plot the histogram of these distributions (use [`plt.hist`](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.hist.html)).<br>\n",
     "Estimate the estimator's empirical average from the bootstrap samples and the mean of its distribution.\n",
@@ -162,12 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-27T08:05:50.870129Z",
-     "start_time": "2018-11-27T08:05:45.840992Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# %load solutions/code1.py\n",
@@ -239,7 +227,9 @@
     "\n",
     "In practice, we never get $\\varphi_A$.\n",
     "\n",
-    "<div class=\"alert alert-success\">**Key results:**<br>\n",
+    "<div class=\"alert alert-success\">\n",
+    "\n",
+    "**Key results:**<br>\n",
     "*1st result:* $\\varphi_A$ is always at least as good as $\\varphi$; $e_A \\leq e$<br>\n",
     "<br>\n",
     "*2nd result:* The highest the variance of $\\varphi$ across training sets $\\mathcal{T}$, the more improvement $\\varphi_A$ produces.<br>\n",
@@ -277,10 +267,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-27T08:30:50.285839Z",
-     "start_time": "2018-11-27T08:30:47.046918Z"
-    },
     "scrolled": true
    },
    "outputs": [],
@@ -307,9 +293,9 @@
     "\n",
     "Xblue = X[y==-1]\n",
     "Xred = X[y==1]\n",
-    "plt.figure()\n",
+    "fig=plt.figure(figsize=(8, 8), dpi= 80, facecolor='w', edgecolor='k')\n",
     "plt.scatter(Xblue[:,0],Xblue[:,1],c='b')\n",
-    "_=plt.scatter(Xred[:,0],Xred[:,1],c='r')"
+    "plt.scatter(Xred[:,0],Xred[:,1],c='r');"
    ]
   },
   {
@@ -325,12 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-27T08:31:51.917021Z",
-     "start_time": "2018-11-27T08:31:51.427330Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import tree\n",
@@ -378,12 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-27T08:31:54.298461Z",
-     "start_time": "2018-11-27T08:31:54.127632Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Generate data\n",
@@ -402,7 +378,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-warning\">**Exercice:**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "\n",
+    "**Exercice:**<br>\n",
     "Implement a Bagging procedure that builds a forest of 101 trees.<br>\n",
     "Monitor the training and generalization error of individual trees and of the forest, along the forest growth.<br>\n",
     "Display and comment.\n",
@@ -412,12 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-27T08:42:35.501698Z",
-     "start_time": "2018-11-27T08:42:35.495866Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import tree\n",
@@ -435,12 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-27T08:42:36.951140Z",
-     "start_time": "2018-11-27T08:42:36.091230Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# %load solutions/code2.py\n",
@@ -451,12 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-27T08:42:43.119557Z",
-     "start_time": "2018-11-27T08:42:40.526180Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Display\n",
@@ -498,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
